src/views/components/Albums/Album/album.scss
@import '../../../../theme.scss';

.album-timeline-container {
    color: #000000;

    .title {
        font-size: $fontSizeTitle;
        font-weight: bold;
    }

    .title.mini {
        font-size: $fontSizeTitleMini;
    }

    .type {
        margin: $spacingMedium 0px;

        display: flex;
        flex-direction: row;

        .type-title {
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;

            font-size: 18px;

            margin-right: $spacingMedium;
            padding-bottom: 2px;
        }
    }

    .track-count {
        font-style: italic;
    }

    .album-content-container.mini {
        display: flex;
        flex-direction: row;
    }

    .album-content-container {
        .album-art-container {
            display: flex;
            flex-direction: row;
            align-items: center;
            justify-content: center;

            margin: $spacingMedium;

            .album-art {
                max-width: 40vw;
                max-height: 40vh;
                width: auto;
                height: auto;
            }

            .album-art.mini {
                max-width: 25vw;
                max-height: 25vh;
                width: auto;
                height: auto;
            }
        }

        .album-content-right {
            display: flex;
            flex-direction: column;

            .alternatives-container {
                .content-container {
                    display: flex;
                    flex-direction: column;

                    .divider {
                        background-color: #000000;
                        margin-bottom: 5px;
                    }
                }
            }
        }
    }

    /* 
  ##Device = Desktops
  ##Screen = 1281px to higher resolution desktops
*/

    @media (min-width: 1281px) {
    }

    /* 
  ##Device = Laptops, Desktops
  ##Screen = B/w 1025px to 1280px
*/

    @media (min-width: 1025px) and (max-width: 1280px) {
        //CSS
    }

    /* 
  ##Device = Tablets, Ipads (portrait)
  ##Screen = B/w 768px to 1024px
*/

    @media (min-width: 768px) and (max-width: 1024px) {
        .title {
            font-size: $fontSizeTitleTablet;
        }

        .title.mini {
            font-size: $fontSizeTitleTabletMini;
        }
    }

    /* 
  ##Device = Tablets, Ipads (landscape)
  ##Screen = B/w 768px to 1024px
*/

    @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
        //CSS
    }

    /* 
  ##Device = Low Resolution Tablets, Mobiles (Landscape)
  ##Screen = B/w 481px to 767px
*/

    @media (min-width: 481px) and (max-width: 767px) {
        .title {
            font-size: $fontSizeTitleTablet;
        }

        .title.mini {
            font-size: $fontSizeTitleTabletMini;
        }
    }

    /* 
  ##Device = Most of the Smartphones Mobiles (Portrait)
  ##Screen = B/w 320px to 479px
*/

    @media (min-width: 320px) and (max-width: 480px) {
        .title {
            font-size: $fontSizeTitleMobile;
        }

        .title.mini {
            font-size: $fontSizeTitleMobileMini;
        }
    }
}

